SOE-3233: fixing height for the large gap between banner and main

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -5351,19 +5351,20 @@ html.js body > .hero-curtain-reveal {
       width: 90%; } }
 /* line 209, ../scss/components/_soe_page.scss */
 .node-type-stanford-page #block-views-stanford-page-top-banner-block .page-cta-link-container {
+  bottom: 100px;
   float: right;
+  height: 0;
   margin-left: 3%;
   margin-right: 8%;
-  position: relative;
-  bottom: 100px; }
+  position: relative; }
   @media (max-width: 480px) {
     /* line 209, ../scss/components/_soe_page.scss */
     .node-type-stanford-page #block-views-stanford-page-top-banner-block .page-cta-link-container {
       bottom: 60px; }
-      /* line 220, ../scss/components/_soe_page.scss */
+      /* line 221, ../scss/components/_soe_page.scss */
       .node-type-stanford-page #block-views-stanford-page-top-banner-block .page-cta-link-container a {
         font-size: 1.7rem; } }
-/* line 226, ../scss/components/_soe_page.scss */
+/* line 227, ../scss/components/_soe_page.scss */
 .node-type-stanford-page #block-views-stanford-page-top-banner-block .page-cta-link-container.right {
   float: left;
   width: 100%; }
